[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/home_selection.gd" type="Script" id=1]
[ext_resource path="res://assets/setting.png" type="Texture" id=2]

[node name="Home Selection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Server_Container" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="Server_Container"]
margin_left = -71.0
margin_top = -29.0
margin_right = 83.0
margin_bottom = -15.0
text = "Set The Ip for the server"

[node name="Button" type="Button" parent="Server_Container"]
margin_left = -32.0
margin_top = 32.0
margin_right = 25.0
margin_bottom = 52.0
text = "Submit"

[node name="Server_IP" type="LineEdit" parent="Server_Container"]
margin_left = -96.0
margin_right = 97.0
margin_bottom = 24.0
placeholder_text = "http://192.168.12.143:8000/"

[node name="QUICKLNK2" type="Button" parent="Server_Container"]
margin_left = -72.0
margin_top = -104.0
margin_right = 76.0
margin_bottom = -84.0
text = "192.168.12.143:8000"

[node name="QUICKLNK1" type="Button" parent="Server_Container"]
margin_left = -40.0
margin_top = -72.0
margin_right = 52.0
margin_bottom = -52.0
text = "0.0.0.0:8000"

[node name="Library" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="GridContainer" type="GridContainer" parent="Library"]
margin_right = 1018.0
margin_bottom = 597.0
custom_constants/vseparation = 250
custom_constants/hseparation = 175
columns = 9

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -52.9999
margin_top = 2.0
margin_right = 459.0
margin_bottom = 514.0
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 2 )

[connection signal="pressed" from="Server_Container/QUICKLNK2" to="." method="_on_quicklnk_2_pressed"]
[connection signal="pressed" from="Server_Container/QUICKLNK1" to="." method="_on_quicklnk_1_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
